--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,7 @@ target/
 /dist/
 /nbdist/
 /.nb-gradle/
-build/
-!build/TestExecutionReport.html
+/build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
