--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,9 @@ target/
 # === Playwright/Custom build directories ===
 /build/
 !/build/TestExecutionReport.html
+!build/
+!**/src/main/**/build/
+!**/src/test/**/build/
 
 # === VS Code ===
 .vscode/
